--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ wheel = "~=0.32.3"
 [packages]
 numpy = "~=1.15.4"
 scipy = "~=1.1.0"
+scikit-learn = "~=0.20"
 
 [requires]
 python_version = "3.7"
